added part 2 to index

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>This is an example module created for a blog post which has not been posted yet.</p>
 
 <p><a href="http://tarmstrong.github.com/poutine_maker/tutorial/part1.html">Part 1</a></p>
+<p><a href="http://tarmstrong.github.com/poutine_maker/tutorial/part2.html">Part 2</a></p>
