Modified head.html, added part2.html

--- a/tutorial/head.html
+++ b/tutorial/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head><title>part 1</title></head>
+<head><title>Poutine Maker: An Introduction to the Field API in Drupal 7</title></head>
 <style>
   body {
     width: 585px;
