Added formatter screenshot.

--- a/tutorial/part2.html
+++ b/tutorial/part2.html
@@ -259,6 +259,10 @@ if ($item['vegetarian']) {
 </code>
 </pre>
 
+<p>Here is the formatter in action:</p>
+
+<p><img src="poutine_formatter_inaction.png" alt="Formatter in action" title="" /></p>
+
 <h2>A More Advanced Formatter</h2>
 
 <p>Now, I'm not a boring person, so I wanted to format my field data in an exciting way using the HTML Canvas API. Here's the PHP code that creates the canvas tag:</p>
