Added demo link

--- a/tutorial/part2.html
+++ b/tutorial/part2.html
@@ -357,7 +357,7 @@ function poutine_maker_field_formatter_info() {
 
 <p>Click the below image for the demo. This demo should work in Chrome and Firefox 4+.</p>
 
-<p><a href="http://demo">
+<p><a href="http://poutinemaker.evolvingweb.ca/node/1">
 <img src="awesome_best_poutine_cropped.png" alt="Poutine Formatter Demo" title="" />
 </a></p>
 
